# task_manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.overrides.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
orders/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
task_manager/: asgi.py  settings.py  urls.py  wsgi.py
task_manager/settings/: __init__.py  base.py  database.py  drf.py  env.py
task_manager/settings/environments/: dev.py  prod.py  test.py
tasks/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_auth.py  test_orders.py  test_tasks.py
users/: serializers.py  urls.py  views.py
